--- a/js/ts/contact-widget/tsconfig.json
+++ b/js/ts/contact-widget/tsconfig.json
@@ -9,6 +9,7 @@
 	}
 	,"files": [
 		"loantek-manual-contact-widget.ts",
-		"build-contact-widget.ts"
+		"build-contact-widget.ts",
+		"captcha.ts"
 	]
 }
