--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "jquery": "1",
     "bootstrap": "3",
     "angular": "1",
-    "angular-bootstrap": "^1.3.2"
+    "angular-bootstrap": "^1.3.2",
+    "angular-animate": "^1.5.5"
   }
 }
