--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "bootstrap": "3",
     "angular": "1",
     "angular-bootstrap": "^1.3.2",
-    "angular-animate": "^1.5.5"
+    "angular-animate": "^1.5.5",
+    "angular-sanitize": "^1.5.5"
   }
 }
