--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular": "1",
     "angular-bootstrap": "^1.3.2",
     "angular-animate": "^1.5.5",
-    "angular-sanitize": "^1.5.5"
+    "angular-sanitize": "^1.5.5",
+    "jquery-placeholder": "^2.3.1"
   }
 }
