--- a/js/ts/contact-widget/tsconfig.json
+++ b/js/ts/contact-widget/tsconfig.json
@@ -1,16 +1,16 @@
 {
-	// "compileOnSave": true,
+	"compileOnSave": true,
 	"compilerOptions": {
 		// "module": "umd",
 		// "noImplicitAny" : true,
 		"removeComments": true,
-		// "outDir": "../../"
+		// "outDir": "../../../"
 		"outFile": "../../loantek-manual-contact-widget.js"
 	}
 	,"files": [
-		"../common/jquery-noconflict.ts",
-		"loantek-manual-contact-widget.ts",
-		"build-form.ts",
-		"captcha.ts"
+		// "../common/jquery-noconflict.ts",
+		// "build-form.ts",
+		// "captcha.ts",
+		"loantek-manual-contact-widget.ts"
 	]
 }
