--- a/js/ts/widget-builder/tsconfig.json
+++ b/js/ts/widget-builder/tsconfig.json
@@ -1,15 +1,16 @@
 {
-	// "compileOnSave": true,
+	"compileOnSave": true,
 	"compilerOptions": {
 		// "module": "umd",
 		// "noImplicitAny" : true,
 		"removeComments": true,
+		// "noResolve": true,
 		// "outDir": "../../"
 		"outFile": "../../widget-builder.js"
 	}
 	,"files": [
 		// "../common/interfaces.ts",
-		"../common/widget-helpers.ts",
+		// "../common/widget-helpers.ts",
 		"main.ts"
 	]
 }
