--- a/bower.json
+++ b/bower.json
@@ -14,10 +14,10 @@
   "devDependencies": {
     "jquery": "1",
     "bootstrap": "3",
+    "jquery-placeholder": "^2.3.1",
     "angular": "1",
-    "angular-bootstrap": "^1.3.2",
     "angular-animate": "^1.5.5",
-    "angular-sanitize": "^1.5.5",
-    "jquery-placeholder": "^2.3.1"
+    "angular-bootstrap": "^1.3.3",
+    "angular-sanitize": "^1.5.5"
   }
 }
