--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular": "1",
     "angular-animate": "^1.5.5",
     "angular-bootstrap": "^1.3.3",
-    "angular-sanitize": "^1.5.5"
+    "angular-sanitize": "^1.5.5",
+    "angular-bootstrap-colorpicker": "^3.0.25"
   }
 }
