--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-animate": "^1.5.5",
     "angular-bootstrap": "^1.3.3",
     "angular-sanitize": "^1.5.5",
-    "angular-bootstrap-colorpicker": "^3.0.25"
+    "angular-bootstrap-colorpicker": "^3.0.25",
+    "angular-dragdrop": "^1.0.13"
   }
 }
