--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,6 @@
     "angular-bootstrap": "^1.3.3",
     "angular-sanitize": "^1.5.5",
     "angular-bootstrap-colorpicker": "^3.0.25",
-    "angular-dragdrop": "^1.0.13"
+    "angular-native-dragdrop": "^1.2.1"
   }
 }
