--- a/bower.json
+++ b/bower.json
@@ -15,12 +15,13 @@
     "bootstrap": "3",
     "jquery-1": "jquery#1",
     "jquery": "2",
+    "jquery-ui": "^1.11.4",
     "jquery-placeholder": "^2.3.1",
     "angular": "1",
     "angular-animate": "^1.5.5",
     "angular-bootstrap": "^1.3.3",
     "angular-sanitize": "^1.5.5",
     "angular-bootstrap-colorpicker": "^3.0.25",
-    "angular-native-dragdrop": "^1.2.1"
+    "angular-dragdrop": "^1.0.13"
   }
 }
