--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-bootstrap": "^1.3.3",
     "angular-sanitize": "^1.5.5",
     "angular-bootstrap-colorpicker": "^3.0.25",
-    "angular-dragdrop": "^1.0.13"
+    "angular-dragdrop": "^1.0.13",
+    "papaparse": "^4.1.2"
   }
 }
