--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular-sanitize": "^1.5.5",
     "angular-bootstrap-colorpicker": "^3.0.25",
     "angular-dragdrop": "^1.0.13",
-    "papaparse": "^4.1.2"
+    "papaparse": "^4.1.2",
+    "simple-line-icons": "^2.4.1"
   }
 }
