--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,15 @@
 		"node_modules",
 		"wwwroot",
 		"bower_components",
-		"js/ts"
+		"metronic_assets",
+		"js/ts",
+		"bin",
+		"obj",
+		"Properties",
+		"Models",
+		"Controllers",
+		"Views",
+		"App_Data",
+		"App_Start"
 	]
 }
